style.css
/* FONTS */

@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Code+Latin:wght@100;200;300;400;500;600;700&display=swap');

/* RESET */

* {
    border: 0;
    margin: 0;
    padding: 0;
}

/* GLOBAL */

body {
    font-family: 'M PLUS Code Latin', sans-serif;
    color: black;
}

a {
    color: white;
    /* text-decoration: none; */
}

.flex {
    display: flex;
}

.left {
    justify-content: flex-start;
}

.right {
    justify-content: flex-end;
}

.centre {
    justify-content: center;
}

.bottom {
    align-items: flex-end;
}

.content {
    width: 50%;
    max-width: 1000px;
    padding: 10px 20px;
    /* padding:5rem 0rem; */
    margin: 2rem 2rem;
    /* margin: 5rem 3rem; */
    line-height: 200%;
}

.content * {
    padding-bottom: 2em;
}

.MBM {
    mix-blend-mode: exclusion;
    color: white;
    /* background-color: white; */
}

.glass {
    background-color: #ffffff10;
    /* background-color: rgba(255, 255, 255, 0.1); */
    backdrop-filter: blur(12px);
    /* -webkit-backdrop-filter: blur(12px); */
    border-radius: 10px;
} 

/* GRID LAYOUT */

.container {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: auto;
    grid-template-areas:
      "navigation navigation navigation navigation navigation navigation navigation navigation navigation navigation navigation navigation"
      "header header header header header header header header header header header header"
      "main main main main main main main main main main main main"
      "footer footer footer footer footer footer footer footer footer footer footer footer";
}

/* HEADER */

header {
    grid-area: header;
    background-image: url(Media/jeremy-bishop-1EBk5DutZqY-unsplash.jpg);
    /* background-image: url(Media/stock-photo-boscombe-pier-1684369.jpg); */
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center bottom;
    /* min-height: 94vh; */
    min-height: calc(100vh - 8rem);
    text-align: center;
    font-size: 4rem;
    padding: 2rem;
    font-weight: 700;
    justify-content: center;
    align-items: center;
}

#head-main {
    padding: 6rem 0rem;
}

/* MAIN */

main {
    grid-area: main;
}

main section {
    /* padding-top: 20px; */
    line-height: 30px;
}

#top-main {

    /* SOLID BACKGROUND */
    /* background-image: url(Media/jeremy-bishop-E55BPtMqh2I-unsplash.jpg);  */

    /* FADED BACKGROUND */
    background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 1) 70%), url(Media/jeremy-bishop-E55BPtMqh2I-unsplash.jpg);

    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center top;
    /* justify-content: center; */
}

/* #top-main h1 {
    padding-bottom: 1rem;
} */

#middle-main {

    /* SOLID BACKGROUND */
    background-image: url(Media/nathan-ziemanski-3scV_o_GRN0-unsplash.jpg);

    /* FADED BACKGROUND */
    /* background-image: linear-gradient(to left, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 1) 60%, rgba(255, 255, 255, 1) 100%), url(Media/nathan-ziemanski-3scV_o_GRN0-unsplash.jpg); */

    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center 80%;
}

#bottom-main {

    /* SOLID BACKGROUND */
    background-image: url(Media/stock-photo-boscombe-pier-1684369.jpg);

    /* FADED BACKGROUND */
    /* background-image: linear-gradient(to left, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 1) 60%, rgba(255, 255, 255, 1) 100%), url(Media/nathan-ziemanski-3scV_o_GRN0-unsplash.jpg); */

    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center top;
}

#top-main h2,
#middle-main h2,
#bottom-main h2 {
    text-transform: uppercase;
}

/* NAVIGATION */

nav {
    grid-area: navigation;
    position: sticky;
    min-width: 100%;
    top: 0;
    background-color: #ffffff;
    /* background: linear-gradient(to bottom, rgba(255,255,255,1), rgba(255,255,255,0)); */
    font-size: 2rem;
    text-transform: uppercase;
    letter-spacing: 0.5rem;
    padding: 1rem 0;
    /* padding: 0.5rem 0 4rem; */
    z-index: 1;
    border-bottom: 1px solid black;
}

#nav-bar {
    justify-content: space-around;
    list-style: none;
}

#nav-bar a {
    color: black;
    text-decoration: none;
}

input#menu {
    display: none;
}

/* FOOTER */

footer {
    grid-area: footer;
}

#footer-main * {
    padding-bottom: 0;
}

/* MEDIA QUERIES */

@media only screen and (max-width:900px) {
    /* .MBM {
        color: limegreen;
    } */
}

@media only screen and (max-width:480px) { /* THIS MEDIA QUERY WORKS - MAX-WIDTH:420PX */
    /* .MBM {
        color: orange;
    } */
    
    .glass {
        background-color: #ffffff10;
    }

    .content {
        width: 95%;
    }

    #top-main {
        background-image: url(Media/jeremy-bishop-E55BPtMqh2I-unsplash.jpg);
    }
}

@media only screen and (max-width:900px) {

    #header,
    #top-main,
    #middle-main,
    #bottom-main {
        background-attachment: scroll;
        background-size: cover;
    }

/* COLLAPSIBLE MENU */

    /* MENU ELEMENTS FOR MOBILE */

    #nav-bar {
        display: block;
        text-align: center;
    }

    #nav-bar li {
        padding: 0.5rem 0;
    }

    #nav-bar li:first-of-type {
        padding-top: 1rem;
    }

    /* MENU IS CLOSED */

    .collapsible-menu label {
        font-family: 'Sedgwick Ave Display', cursive;
        font-size: 56px;
        display: block;
        cursor: pointer;
        background: url(Icons/menu.png) no-repeat center center;
        /* background-color: red; */
        background-size: 30px;
        padding: 20px 0 20px 50px;
    }

    /* input#menu {
        display: none;
    } */

    /* input:checked +label {
        background: url(Icons/menu.png);
    } */

    .menu-content {
        max-height: 0;
        overflow: hidden;
        font-family: 'Oswald', sans-serif; 
        /* padding: 0 auto; */
    }

    /* MENU IS OPEN */
    /* Toggle Effect */
    input:checked ~ label {
        background: url(Icons/close.png) no-repeat center center;
        /* background-color: greenyellow; */
        background-size: 30px;
    }

    input:checked ~ .menu-content {
        max-height: 100%;
        /* background-color: yellow; */
        /* height: calc(100%); */
        transition: max-height 0s linear;
    }
    
}

